made the bullet points gifs

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ header h2 {
   background-color: #B7C7CC;
 }
 #hourInfo {
-  list-style-image: url(fishicon.png);
+  list-style-image: url(340.gif);
   margin: 1em;
   font-size: 1.5em;
   font-family: 'Helvetica', sans-serif;
