--- a/style.css
+++ b/style.css
@@ -28,13 +28,12 @@ header h2 {
 }
 #storeDiv {
   margin: auto;
-  width: 80%;
+  width: auto;
   border: 3px solid black;
   padding: 10px;
   background-color: #B7C7CC;
 }
 #hourInfo {
-  list-style-image: url(fishies.gif);
   margin: 1em;
   font-size: 1.5em;
   font-family: 'Helvetica', sans-serif;
@@ -61,3 +60,17 @@ header h3 {
 .store {
   padding: 5px;
 }
+table, tr, td, th, thead, tfoot {
+  border: thin solid black;
+  background-color: #FF9F71;
+}
+
+table, tr {
+  background-color: #CCA13C;
+}
+ th {
+   background-color: #77CCA7;
+ }
+ tfoot td {
+   background-color: #6EFFEA;
+ }
