got the submit button submitting, building the eventlistener

--- a/style.css
+++ b/style.css
@@ -82,3 +82,7 @@ table, tr {
  td:hover {
    background-color: #7EFF82 !important;
  }
+ .submit {
+   border: thick solid black;
+   max-width: 100%;
+ }
