--- a/style.css
+++ b/style.css
@@ -91,3 +91,43 @@ table, tr {
  span {
   font-weight: bold;
  }
+ .testimonial {
+   border: 1px solid black;
+   background-color: #D6D2AD;
+   width: 80%;
+   margin-left: 10%;
+   font-size: 1.2em;
+ }
+.merch {
+  height: 225px;
+}
+#about p {
+  border: 1px solid black;
+  background-color: #D6D2AD;
+  width: 80%;
+  margin-left: 10%;
+  font-size: 1.2em;
+  padding: 5%;
+}
+#aboutstores {
+  width: 60%;
+  margin-left: 20%;
+}
+nav {
+  border: solid 5px black;
+  width: 80%;
+  margin: 1% 10%;
+  background-color: #B7C7CC;
+  text-align: center;
+}
+nav a {
+  text-decoration: none;
+  color: black;
+  padding: 3%;
+}
+table {
+  width: 100%;
+}
+#storeDiv {
+  text-align: center;
+}
